# hardcaml-web-ide

./: .dockerignore  .env.example  .gitignore  ADVENT_OF_FPGA.md  AGENTS.md  DEPLOY.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.base  Dockerfile.base  Dockerfile.dev  LICENSE  Makefile  Nand2Tetris.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  railway.json
api/: README.md  app.py  compiler.py  config.py  hardcaml_runner.py  main.py  pyproject.toml  rate_limit.py  result_cache.py  routes.py  schemas.py  test_runner.py  workspace_cache.py
api/tests/: conftest.py  examples.py  test_examples.py  test_rate_limit.py  test_workspace_cache.py
docs/: DEPLOY.md  Nand2Tetris.md
frontend/: Dockerfile.docs  Dockerfile.frontend  README.md  (+9 more)
hardcaml/aoc/day2_part2/: circuit.ml  circuit.mli  dune  dune-project  generate_verilog.ml  harness_utils.ml  test.ml
hardcaml/build-cache/lib/n2t_chips/: add16.ml  add16.mli  add16_test.ml  alu.ml  alu.mli  alu_test.ml  and.ml  and.mli  and16.ml  and16.mli  and16_test.ml  and_test.ml  aregister.ml  aregister.mli  bit.ml  bit.mli  bit_test.ml  computer.ml  computer.mli  computer_test.ml  cpu.mli  cpu_test.ml  dff.ml  dff.mli  dff_test.ml  dmux.ml  dmux.mli  dmux4way.ml  dmux4way.mli  dmux4way_test.ml  dmux8way.ml  dmux8way.mli  dmux8way_test.ml  dmux_test.ml  dregister.ml  dregister.mli  dune  fulladder.ml  fulladder.mli  fulladder_test.ml  (+69 more)
hardcaml/build-templates/n2t/lib/n2t_chips/: add16.ml  add16.mli  add16_test.ml  alu.ml  alu_test.ml  and.ml  and16.ml  and16.mli  and16_test.ml  and_test.ml  bit.mli  bit_test.ml  computer_test.ml  cpu.ml  cpu_test.ml  dff.ml  dff_test.ml  dmux.mli  dmux4way_test.ml  dmux8way.mli  dmux8way_test.ml  dmux_test.ml  dregister.mli  dune  fulladder.ml  fulladder_test.ml  halfadder.ml  halfadder.mli  halfadder_test.ml  inc16.ml  inc16_test.ml  memory.ml  memory_test.ml  mux.ml  mux16.ml  mux16.mli  mux16_test.ml  mux4way16_test.ml  mux8way16.mli  mux8way16_test.ml  (+32 more)
(+358 files in other folders)
