(library
 (name user_circuit)
 (libraries core hardcaml)
 (modules circuit)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(library
 (name user_test)
 (libraries 
   core 
   hardcaml 
   hardcaml_waveterm
   hardcaml_test_harness
   user_circuit)
 (modules test harness_utils)
 (wrapped false)
 (inline_tests (deps input.txt))
 (preprocess
  (pps ppx_hardcaml ppx_jane ppx_expect)))

(executable
 (name generate_verilog)
 (libraries core hardcaml user_circuit)
 (modules generate_verilog)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))
